# solitaire-solver

./: LICENSE  README.md  solitaire-solver.cabal
app/: Main.hs
monitor/: .gitignore  screen_reader.py  server.py
monitor/data/: converter.py  create_bulk_image.py  label_list.txt  train.sh
monitor/data/presenter/: Presenter.py  util.py
monitor/nn/: predictor.py  prepare.py  screen_reader.py  train.py  validate.py
src/: Parser.hs  Performer.hs  Pretty.hs  Solver.hs  Types.hs
