name:                solitaire-solver
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Frefreak/solitaire-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Xiangyu Zhu
maintainer:          frefreak.zxy@gmail.com
copyright:           Copyright Xiangyu Zhu (c) 2016
category:            Abstract
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Solver
                     , Parser
                     , Pretty
                     , Performer
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , bytestring
                     , http-client
                     , lens-aeson
                     , text
                     , mtl
                     , containers
                     , unordered-containers
                     , hashable
                     , process
  default-language:    Haskell2010

executable solitaire-solver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , solitaire-solver
                     , containers
                     , unordered-containers
                     , mtl
  default-language:    Haskell2010

test-suite solitaire-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , solitaire-solver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Frefreak/solitaire-solver
